--- a/style.css
+++ b/style.css
@@ -43,11 +43,10 @@ main h1 {
 main h3 {
     text-align: center;
     color: rgb(27, 97, 227);
-    padding: 6px;
 }
 
 .nome {
-    padding: 1px;
+    padding: 10px;
     color: rgb(0, 0, 132);
     text-align: center;
     font-family: 'Dancing Script',"Baskervville SC", serif;
@@ -130,5 +129,12 @@ div {
 a button:hover {
     background-color: #0056b3;
 }
+
+.material-symbols-outlined {
+    font-size: 20px;
+    vertical-align: middle;
+    margin-right: 8px;
+}
+
 
 
